samples/_failures_safe/1761793736_7b1724_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bab11668.c: In function ‘main’:
./samples/SAFE/__tmp_bab11668.c:143:22: error: missing terminating " character
  143 |     if (!read_size_t("Enter
      |                      ^~~~~~
./samples/SAFE/__tmp_bab11668.c:143:5: error: expected expression at end of input
  143 |     if (!read_size_t("Enter
      |     ^~
./samples/SAFE/__tmp_bab11668.c:143:10: error: too few arguments to function ‘read_size_t’
  143 |     if (!read_size_t("Enter
      |          ^~~~~~~~~~~
./samples/SAFE/__tmp_bab11668.c:92:5: note: declared here
   92 | int read_size_t(const char *prompt, size_t *value) {
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_bab11668.c:143:5: error: expected declaration or statement at end of input
  143 |     if (!read_size_t("Enter
      |     ^~
